# l2r

./: .clippy.toml  .dockerignore  .gitignore  .luarc.json  Cargo.toml  README.md  docker-compose.yml  runcc.yml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
bevy_enum_tag/: Cargo.toml
bevy_enum_tag/src/: lib.rs
bevy_enum_tag/tests/: tests.rs
core/: Cargo.toml
core/src/: chronicles.rs  lib.rs  metrics.rs  metrics_test.rs
core/src/assets/: binary.rs  html.rs  mod.rs  text.rs
core/src/crypt/: blowfish.rs  crypt_engine.rs  mod.rs  scrambled_rsa.rs  session_keys.rs  tests.rs  xor.rs
core/src/db/: error.rs  mod.rs  postgres.rs  redis.rs  repository.rs
core/src/model/: access_level.rs  base_class.rs  generic_number.rs  mod.rs  race.rs  session.rs
core/src/packets/: client.rs  mod.rs  serialize.rs  server.rs
core/src/plugins/: mod.rs
core/src/plugins/custom_hierarchy/: mod.rs
core/src/utils/: mod.rs  pagination.rs
game_server/: Cargo.toml
game_server/crates/config/: Cargo.toml
game_server/crates/config/src/: lib.rs
game_server/crates/game_core/: Cargo.toml
game_server/crates/game_core/src/: collision_layers.rs  consts.rs  lib.rs  utils.rs
game_server/crates/map/: Cargo.toml
game_server/crates/map/src/: doors.rs  lib.rs  spawn_point.rs  static_mesh.rs
game_server/crates/physics/: Cargo.toml
game_server/crates/physics/src/: collision_layers.rs  lib.rs
game_server/crates/scripting/: Cargo.toml
game_server/crates/scripting/src/: lib.rs  runtime.rs  utils.rs
game_server/crates/spatial/: Cargo.toml
game_server/crates/spatial/src/: game_vec.rs  geo_point.rs  geo_vec.rs  heading.rs  lib.rs  navigation.rs  waypoint.rs
game_server/crates/state/: Cargo.toml
game_server/crates/state/src/: lib.rs  loading.rs  system.rs
game_server/crates/system_messages/: Cargo.toml
game_server/crates/system_messages/src/: id.rs  lib.rs  param.rs
game_server/data/: class_tree.ron  config.toml
game_server/data/items/high_five/: 00100-00199.json  00200-00299.json  00300-00399.json  00400-00499.json  00500-00599.json  00600-00699.json  00700-00799.json  00800-00899.json  00900-00999.json  01000-01099.json  01100-01199.json  01200-01299.json  01300-01399.json  01400-01499.json  01500-01599.json  01600-01699.json  01700-01799.json  01800-01899.json  01900-01999.json  02000-02099.json  02100-02199.json  02200-02299.json  02300-02399.json  02400-02499.json  02500-02599.json  02600-02699.json  02700-02799.json  02800-02899.json  02900-02999.json  03000-03099.json  03100-03199.json  03200-03299.json  03300-03399.json  03400-03499.json  03500-03599.json  03600-03699.json  03700-03799.json  03800-03899.json  03900-03999.json  04000-04099.json  (+154 more)
game_server/data/npc/high_five/: 00100-00199.json  01500-01599.json  01600-01699.json  02000-02099.json  02500-02599.json  04300-04399.json  12000-12099.json  12300-12399.json  12500-12599.json  12600-12699.json  12700-12799.json  13000-13099.json  13100-13199.json  13200-13299.json  14000-14099.json  14100-14199.json  14200-14299.json  14300-14399.json  14400-14499.json  14500-14599.json  14600-14699.json  14700-14799.json  14800-14899.json  14900-14999.json  16000-16099.json  18000-18099.json  18100-18199.json  18200-18299.json  18300-18399.json  18400-18499.json  18500-18599.json  18600-18699.json  18700-18799.json  18800-18899.json  18900-18999.json  20000-20099.json  20100-20199.json  20200-20299.json  20300-20399.json  20400-20499.json  (+84 more)
game_server/data/race_stats/high_five/: race_stats.json
game_server/data/regions/high_five/: 16_19.json  17_21.json  17_25.json  18_14.json  19_23.json  20_18.json  20_22.json  20_23.json  20_25.json  22_25.json  24_21.json
game_server/data/scripts/: Logger.lua  LuaApp.lua  LuaPlugin.lua  TestUtils.lua  Utils.lua  types.lua
game_server/data/scripts/game/: AbnormalEffects.lua  Attacking.lua  Casting.lua  InActionPathfindingTimer.lua  MoveToEntity.lua  Movement.lua  PaperDoll.lua  PassiveSkills.lua  PathFinding.lua  SkillList.lua  SkillReuse.lua  Skills.lua  Spatial.lua  StatModifiers.lua  Stats.lua  Transform.lua
game_server/data/scripts/packets/: MagicSkillCanceled.lua  MagicSkillLaunched.lua  MagicSkillUse.lua  PlaySound.lua  SetupGauge.lua  SystemMessage.lua
game_server/data/scripts/tests/: test_lua_app.lua  test_plugin.lua
game_server/data/skills_trees/high_five/: AbyssWalker.json  Adventurer.json  Arbalester.json  ArcanaLord.json  Archmage.json  Artisan.json  Assassin.json  Berserker.json  Bishop.json  Bladedancer.json  BountyHunter.json  Cardinal.json  Cleric.json  DarkAvenger.json  DarkFighter.json  DarkMystic.json  DarkWizard.json  Destroyer.json  Dominator.json  Doombringer.json  Doomcryer.json  Dreadnought.json  Duelist.json  DwarvenFighter.json  ElementalMaster.json  ElementalSummoner.json  ElvenElder.json  ElvenFighter.json  ElvenKnight.json  ElvenMystic.json  ElvenOracle.json  ElvenScout.json  ElvenWizard.json  EvasSaint.json  EvasTemplar.json  FortuneSeeker.json  GhostHunter.json  GhostSentinel.json  Gladiator.json  GrandKhavatari.json  (+61 more)
game_server/data/spawns/high_five/: 12_24.json  12_25.json  13_23.json  13_24.json  13_25.json  14_22.json  14_23.json  14_24.json  14_25.json  15_25.json  16_10.json  16_12.json  16_13.json  16_19.json  16_20.json  16_21.json  16_24.json  16_25.json  17_15.json  17_16.json  17_17.json  17_19.json  17_20.json  17_21.json  17_22.json  17_23.json  17_25.json  18_10.json  18_14.json  18_16.json  18_19.json  18_20.json  18_21.json  18_22.json  18_23.json  18_24.json  18_25.json  19_10.json  19_13.json  19_14.json  (+86 more)
game_server/data/teleport/high_five/: destinations.json
game_server/data/tests/: items.json  npc.json  spawns.json  zones.json
game_server/src/: lib.rs  main.rs  tests.rs
game_server/src/plugins/: mod.rs  shutdown.rs
game_server/tests/: lua_tests.rs
login_server/: Cargo.toml
login_server/data/: config.toml  server_names.json
login_server/src/: lib.rs  main.rs
login_server/src/crypt/: checksum.rs  mod.rs
login_server/src/plugins/: config.rs  mod.rs
login_server/src/utils/: password.rs
(+973 files in other folders)
