[package]
name = "bevy_enum_tag"
version = "0.2.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.87", features = ["full"] }
quote = { version = "1.0.40" }
proc-macro2 = { version = "1.0.95" }
convert_case = "0.9.0"

[dev-dependencies]
bevy = { version = "0.16", default-features = false }
