[package]
name = "l2r_loginserver"
version = "0.1.0"
edition = "2024"

[dependencies]
l2r_core = { path = "../core", features = ["high_five"] }
bevy = { workspace = true }
bevy_asset = { workspace = true }
bevy_common_assets = { workspace = true, features = ["json", "ron"] }

bevy_slinet = { workspace = true }
bevy_defer = { workspace = true }

chrono = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
derive_more = { workspace = true }
blowfish = { workspace = true }
generic-array = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
redis = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
num_enum = { workspace = true }
strum = { workspace = true }
argon2 = "0.5"
tokio = { workspace = true }

[features]
default = []
gui = []

[[bin]]
name = "login_migrations"
path = "src/bin/migrations.rs"
