[package]
name = "spatial"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
l2r_core = { workspace = true }

num_enum = {workspace = true }
bitflags = {workspace = true }
strum = {workspace = true }
derive_more = {workspace = true }
rand = {workspace = true }
serde = {workspace = true }